# arene-base

./: .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  LICENSE.md  MODULE.bazel  README.md
arene/base/: BUILD.bazel  algorithm.hpp  array.hpp  atomic.hpp  bit.hpp  byte.hpp  compare.hpp  constraints.hpp  contracts.hpp  endian.hpp  functional.hpp  inline_string.hpp  integer_sequences.hpp  iterator.hpp  linalg.hpp  math.hpp  mdspan.hpp  memory.hpp  monostate.hpp  mutex.hpp  optional.hpp  pointer.hpp  result.hpp  scope_guard.hpp  semantic_version.hpp  source_location.hpp  span.hpp  string_algorithms.hpp  string_view.hpp  tuple.hpp  type_info.hpp  type_list.hpp  type_traits.hpp  unicode.hpp  units.hpp  utility.hpp  variant.hpp
arene/base/algorithm/: BUILD.bazel  all_of.hpp  any_of.hpp  clamp.hpp  copy.hpp  copy_if.hpp  equal.hpp  fill.hpp  find.hpp  find_if.hpp  inner_product.hpp  inplace_merge.hpp  iota.hpp  iter_swap.hpp  lexicographical_compare.hpp  move.hpp  move_backward.hpp  rotate.hpp  sort.hpp  stable_sort.hpp  swap_ranges.hpp  transform.hpp  transform_reduce.hpp
arene/base/array/: BUILD.bazel  array.hpp  array_exceptions_disabled.cpp  array_exceptions_enabled.cpp
arene/base/atomic/: BUILD.bazel  atomic_monotonic_counter.hpp
arene/base/benchmark/: BUILD.bazel  inline_vector_push_back_bm.cpp
arene/base/bit/: BUILD.bazel  bit_cast.hpp
arene/base/byte/: BUILD.bazel  byte.hpp
arene/base/compare/: BUILD.bazel  compare_three_way.hpp  operators.hpp  strong_ordering.hpp
arene/base/compiler_support/: BUILD.bazel  asan_annotations.hpp  attributes.hpp  builtin_types.hpp  cpp14_inline.hpp  diagnostics.hpp  expect.hpp  hardware_queries.hpp  integer_types.hpp  is_possibly_constant_evaluated.hpp  platform_queries.hpp  preprocessor.hpp  thread_safety_annotations.hpp  version.hpp
arene/base/constraints/: BUILD.bazel  constraints.hpp  substitution_succeeds.hpp
arene/base/contracts/: BUILD.bazel  contract.cpp  contract.hpp  contract_restricted_libc.cpp
arene/base/detail/: BUILD.bazel  dynamic_extent.hpp  exceptions.hpp  parasoft.suppress  raw_c_string.hpp  wrapped_iterator.hpp
arene/base/endian/: BUILD.bazel  byte_swap.hpp  endian.hpp
arene/base/filesystem/: BUILD.bazel  directory_handle.cpp  directory_handle.hpp  error_code.cpp  error_code.hpp  file_handle.cpp  file_handle.hpp  generic_temp_file.cpp  linux_temp_file.cpp  open_flags.hpp  path_string.hpp  scoped_change_directory.cpp  scoped_change_directory.hpp  temporary_directory.cpp  temporary_directory.hpp
arene/base/functional/: BUILD.bazel  bind_back.hpp  bind_front.hpp  bind_overloads.hpp  function_ref.hpp  function_traits.hpp  identity.hpp  invoke.hpp  is_noexcept_part_of_function_type.hpp  not_fn.hpp  perfect_forward_call_wrapper.hpp
arene/base/inline_container/: BUILD.bazel  circular_buffer.hpp  deque.hpp  external_vector.hpp  function.hpp  map.hpp  map_exceptions_disabled.cpp  map_exceptions_enabled.cpp  set.hpp  (+4 more)
configs/: BUILD.bazel  inverse_match.bzl
configs/compiler/: BUILD.bazel
configs/tests/: filesystem_available  filesystem_not_available_if_disabled
docs/examples/: BUILD.bazel  atomic_counter_examples.cpp  compiler_support_examples.cpp  constraints_examples.cpp  expect_examples.cpp  external_vector_test_examples.cpp  inline_container_examples.cpp  inline_vector_test_examples.cpp  ordering_examples.cpp  result_examples.cpp  scope_guard_examples.cpp  type_list_examples.cpp  type_name_examples.cpp  type_traits_examples.cpp  type_traits_tutorial.cpp  use_span_examples.cpp  utility_examples.cpp
rules/: BUILD.bazel  armlm_import.bzl  binary_log.bzl  cc_build_error.bzl  cc_library_with_variants.bzl  cc_test.bzl  command_succeeds.bzl  compile_command.bzl  diff_test.bzl  doxygen.bzl  gcc_plugin_headers.bzl  grep.bzl  local_platform_config.bzl  nested_bazel_command.bzl  redirect.hpp.in  stdlib_redirect_library.bzl  transition_binary.bzl  transitions.bzl
rules/impl/: BUILD.bazel  get_compile_command.bzl
stdlib/: BUILD.bazel  terminate.cpp  terminate.hpp  terminate_restricted_libc.cpp
stdlib/include/: algorithm  atomic  cassert  ccomplex  cerrno  cfenv  cfloat  chrono  cinttypes  ciso646  climits  codecvt  condition_variable  cstddef  cstdint  cstring  cwctype  exception  fstream  functional  future  initializer_list  ios  istream  iterator  limits  list  locale  map  memory  new  numeric  random  ratio  regex  set  sstream  stack  stdexcept  streambuf  (+10 more)
stdlib/tests/: BUILD.bazel  accumulate_test.cpp  add_const_test.cpp  add_cv_test.cpp  add_lvalue_reference_test.cpp  add_pointer_test.cpp  add_rvalue_reference_test.cpp  add_volatile_test.cpp  addressof_test.cpp  adjacent_find_test.cpp  arene_base_components_usable_test.cpp  arene_base_contracts_test.cpp  back_insert_iterator_test.cpp  basic_iterator_test.cpp  begin_test.cpp  cfloat_test.cpp  climits_test.cpp  common_type_test.cpp  comparison_test.cpp  compiler_support_diagnostics_test.cpp  compiler_support_stdlib_info_test.cpp  conditional_test.cpp  copy_n_test.cpp  count_if_test.cpp  cstddef_test.cpp  cstdint_test.cpp  decay_test.cpp  declval_test.cpp  divides_test.cpp  duration_test.cpp  enable_if_test.cpp  end_test.cpp  equal_to_test.cpp  exchange_test.cpp  extent_test.cpp  find_if_not_test.cpp  forward_as_tuple_test.cpp  forward_test.cpp  greater_equal_test.cpp  greater_test.cpp  (+107 more)
testlibs/: BUILD.bazel
testlibs/dummy_gmock/: BUILD.bazel  gmock.h
testlibs/dummy_gtest/: BUILD.bazel  gtest.h
testlibs/minitest/: BUILD.bazel  assertion_strings.hpp  cstring.hpp  death_tests.hpp  functional.hpp  libc.hpp  line_number.hpp  matcher.hpp  minitest.cpp  minitest.hpp  minitest_output.cpp  minitest_output.hpp  source_location.hpp  test_context.hpp  tmp_stdlib_operator_new_delete.cpp  tmp_stdlib_operator_new_delete.hpp  type_name.hpp  utility.hpp  utility_types.hpp
testlibs/utilities/: BUILD.bazel  common_test_types.hpp  configurable_value.hpp  constexpr_traits.hpp  counted_algorithm.hpp  counter_mixin.hpp  counting_wrapper.hpp  disable_mixin.hpp  has_broken_less_than.hpp  iterator_types.hpp  mutate.hpp  noexcept_mixin.hpp  throws_on.hpp  tuplet.hpp
(+1391 files in other folders)
